<resources>
    <!--Overall application-->
    <string name="app_name">productivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_task">createTask</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_list_page">MainActivity</string>

    <!--createTask activity-->
    <string name="createTask_title">Create Task</string>
    <string name="createTask_taskTitle">Task Title</string>
    <string name="createTask_description">Description</string>
    <string name="createTask_dueDate">Due Date</string>
    <string name="createTask_onGoing">Ongoing?</string>
    <string name="createTask_calendarButtonDesc">Calendar Select</string>

    <!--mainActivity popup-->
    <string name="popup_delete">Delete</string>
    <string name="popup_edit">Edit</string>

    <!--MainActivity-->
    <string name="main_emptyDescription">No upcoming tasks! (Yay)</string>

    <!--Nav Menu-->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_new_task">New Task</string>

    <!--Settings Menu-->
    <string name="settings_dateForm">Date Format</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
