<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_create_task"
        tools:context=".createTask">

    <TextView
            android:text="@string/createTask_taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="20sp" android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/createTask_dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/Description"/>

    <TextView
            android:text="@string/createTask_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="20sp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/titleLayout"/>

    <CheckBox
            android:text="@string/createTask_onGoing"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:id="@+id/onGoingCheck" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:checked="false"/>
    <ImageView
            android:id="@+id/calendarButton"
            android:contentDescription="@string/createTask_calendarButtonDesc"
            app:srcCompat="@drawable/ic_event_note_black_45dp"
            android:layout_width="45dp"
            android:layout_height="45dp" tools:srcCompat="@drawable/ic_event_note_black_45dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:clickable="true"
            android:focusable="true" app:layout_constraintStart_toEndOf="@+id/dateLayout"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/Description" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/titleLayout">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/Title"
                android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/Date"
                android:clickable="false" android:editable="false"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:enabled="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>