<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/clear_bkg">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/task_outer_border" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:gravity="center_vertical" android:layout_weight="0">
            <TextView
                    android:text="X"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/x_view" android:textSize="35sp"
                    android:gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp" android:layout_weight="0"/>
            <TextView
                    android:text="Title Here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/title" android:layout_weight="1"
                    android:layout_marginLeft="8dp" android:textSize="20sp" android:layout_marginRight="8dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/linearLayout3"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                android:layout_weight="1">
            <TextView
                    android:text="@string/createTask_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="Description Here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/descript" android:layout_marginBottom="32dp"
                    android:scrollbars="vertical" android:layout_marginLeft="8dp"/>
            <TextView
                    android:text="@string/createTask_dueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView10"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="Due Date Here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/dueDate" android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="0">
            <Button
                    android:text="@string/popup_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/del_but" android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"/>
            <Button
                    android:text="@string/popup_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/ed_but" android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>